--- a/jan-1st_2014-2050.html
+++ b/jan-1st_2014-2050.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2 class="text-primary">Find Years when 1st January is a Sunday</h2>
+            <h2 class="text-primary">Find Years when 1st January is a Sunday(i.e 2014 to 2050)</h2>
             <button class="btn btn-custom mt-3" onclick="findSundays()">Find Years</button>
             <div id="result" class="mt-3"></div>
         </div>
